--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,9 @@
 />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+  
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
